crates/macros/tests/debug_job/fail/not_send.stderr
error: future cannot be sent between threads safely
 --> tests/debug_job/fail/not_send.rs:3:1
  |
3 | #[debug_job]
  | ^^^^^^^^^^^^ future returned by `job` is not `Send`
  |
  = help: within `impl Future<Output = ()>`, the trait `Send` is not implemented for `Rc<()>`
note: future is not `Send` as this value is used across an await
 --> tests/debug_job/fail/not_send.rs:6:14
  |
5 |     let _rc = std::rc::Rc::new(());
  |         --- has type `Rc<()>` which is not `Send`
6 |     async {}.await;
  |              ^^^^^ await occurs here, with `_rc` maybe used later
note: required by a bound in `check`
 --> tests/debug_job/fail/not_send.rs:3:1
  |
3 | #[debug_job]
  | ^^^^^^^^^^^^ required by this bound in `check`
  = note: this error originates in the attribute macro `debug_job` (in Nightly builds, run with -Z macro-backtrace for more info)
